// Vitest Snapshot v1

exports[`RoundedButton > disabled > should trigger when clicked 1`] = `
<div>
  <button
    class="css-1gxxcqd-Box e2i8k6n3"
    color="muted"
    font-size="0"
    height="1"
  >
    disabled
  </button>
</div>
`;

exports[`RoundedButton > not disabled > should trigger when clicked 1`] = `
<div>
  <button
    class="css-z6k8zu-Box e2i8k6n3"
    color="muted"
    cursor="pointer"
    font-size="0"
    height="1"
  >
    not disabled
  </button>
</div>
`;
